# peercred-example

./: CMakeLists.txt  Dockerfile  README.md
src/: client.c  evil_client.c  evil_setuidmap.c  server.c
